# Visual_Product_Search_Engine_CLIP_Qdrant

./: README.md  main.py  pyproject.toml  requirements.txt
data/qdrant_db/collection/products/: storage.sqlite
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
src/: embedder.py  indexer.py  prepare_data.py  search.py  store.py
