[project]
name = "visual-product-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==2.19.1",
    "fastapi>=0.136.1",
    "huggingface-hub==0.23.2",
    "pillow>=12.2.0",
    "qdrant-client>=1.18.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers==4.41.2",
    "uvicorn>=0.47.0",
]
